--- a/frontend/src/pages/Landing/styles.css
+++ b/frontend/src/pages/Landing/styles.css
@@ -19,7 +19,7 @@
 }
 
 .logo-container {
-  text-align: center;
+  text-align: left;
   margin-bottom: 3.2rem;
 }
 
@@ -35,11 +35,11 @@
   justify-content: center;
   margin: 3.2rem 0;
 }
+
 .buttons-container a {
   width: 30rem;
   height: 10.4rem;
   border-radius: 0.8rem;
-  margin-right: 1.6rem;
   font: 700 2rem Archivo;
 
   display: flex;
@@ -51,23 +51,35 @@
 
   transition: background-color 0.2s;
 }
+
 .buttons-container a:first-child {
   margin-right: 1.6rem;
 }
+
 .buttons-container a img {
-  margin-right: 2.4rem;
+  width: 4rem;
 }
+
 .buttons-container a.study {
   background: var(--color-primary-lighter);
+  padding: 0 1rem;
 }
+
 .buttons-container a.give-classes {
   background: var(--color-secundary);
+  padding: 0 1rem;
 }
+
 .buttons-container a.study:hover {
   background: var(--color-primary-light);
 }
+
 .buttons-container a.give-classes:hover {
   background: var(--color-secundary-dark);
+}
+
+.buttons-container a img {
+  margin-right: 2.4rem;
 }
 
 .total-connections {
@@ -77,6 +89,7 @@
   align-items: center;
   justify-content: center;
 }
+
 .total-connections img {
   margin-left: 0.8rem;
 }
@@ -84,30 +97,33 @@
 @media (min-width: 1100px) {
   #page-landing-content {
     max-width: 1100px;
+
     display: grid;
     grid-template-rows: 350px 1fr;
     grid-template-columns: 2fr 1fr 1fr;
-    grid-template-areas:
-      "logo hero hero"
-      "buttons buttons total";
+    grid-template-areas: "logo hero hero" "buttons buttons total";
   }
+
   .logo-container {
     grid-area: logo;
-    text-align: left;
     align-self: center;
     margin: 0;
   }
+
   .logo-container img {
     height: 100%;
   }
+
   .logo-container h2 {
     text-align: initial;
     font-size: 3.6rem;
   }
+
   .hero-image {
     grid-area: hero;
     justify-self: end;
   }
+
   .buttons-container {
     grid-area: buttons;
     justify-content: flex-start;
@@ -115,8 +131,9 @@
   .buttons-container a {
     font-size: 2.4rem;
   }
+
   .total-connections {
     grid-area: total;
-    justify-self: flex-end;
+    justify-self: end;
   }
 }
